--- a/src/main/resources/com/main/datenpunk/newProject-view.fxml
+++ b/src/main/resources/com/main/datenpunk/newProject-view.fxml
@@ -2,45 +2,339 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.NewProjectController">
    <center>
-      <VBox>
+      <ScrollPane focusTraversable="false" hbarPolicy="NEVER">
+         <content>
+            <VBox alignment="CENTER">
+               <children>
+                  <VBox fx:id="columnContainer">
+                     <children>
+                        <VBox>
+                           <children>
+                              <HBox>
+                                 <children>
+                                    <VBox>
+                                       <HBox.margin>
+                                          <Insets right="5.0" />
+                                       </HBox.margin>
+                                       <children>
+                                          <Label />
+                                          <TextField prefHeight="25.0" prefWidth="30.0" promptText="no" text="1" />
+                                       </children>
+                                    </VBox>
+                                    <VBox>
+                                       <children>
+                                          <Label text="Name:" />
+                                          <TextField disable="true" editable="false" text="id" />
+                                          <CheckBox disable="true" mnemonicParsing="false" text="Track History">
+                                             <VBox.margin>
+                                                <Insets top="5.0" />
+                                             </VBox.margin>
+                                          </CheckBox>
+                                       </children>
+                                       <HBox.margin>
+                                          <Insets bottom="5.0" right="10.0" />
+                                       </HBox.margin>
+                                    </VBox>
+                                    <VBox>
+                                       <children>
+                                          <Label text="Type:" />
+                                          <ChoiceBox disable="true" prefWidth="150.0">
+                                             <VBox.margin>
+                                                <Insets right="5.0" />
+                                             </VBox.margin>
+                                          </ChoiceBox>
+                                       </children>
+                                       <HBox.margin>
+                                          <Insets bottom="5.0" />
+                                       </HBox.margin>
+                                    </VBox>
+                                    <VBox>
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                       <children>
+                                          <Label />
+                                          <Button disable="true" mnemonicParsing="false" text="⛌" />
+                                       </children>
+                                    </VBox>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </VBox.margin>
+                              </HBox>
+                              <Separator prefWidth="200.0" />
+                           </children>
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <HBox alignment="TOP_CENTER">
+                                 <children>
+                                    <VBox>
+                                       <children>
+                                          <Label />
+                                          <TextField prefHeight="25.0" prefWidth="30.0" promptText="no" text="2" />
+                                       </children>
+                                       <HBox.margin>
+                                          <Insets right="5.0" />
+                                       </HBox.margin>
+                                    </VBox>
+                                    <VBox>
+                                       <children>
+                                          <Label text="Name:" />
+                                          <TextField disable="true" editable="false" text="Name" />
+                                          <CheckBox mnemonicParsing="false" text="Track History">
+                                             <VBox.margin>
+                                                <Insets top="5.0" />
+                                             </VBox.margin>
+                                          </CheckBox>
+                                       </children>
+                                       <HBox.margin>
+                                          <Insets bottom="5.0" right="10.0" />
+                                       </HBox.margin>
+                                    </VBox>
+                                    <VBox>
+                                       <children>
+                                          <Label text="Type:" />
+                                          <ChoiceBox disable="true" prefWidth="150.0">
+                                             <VBox.margin>
+                                                <Insets right="5.0" />
+                                             </VBox.margin>
+                                          </ChoiceBox>
+                                       </children>
+                                       <HBox.margin>
+                                          <Insets bottom="5.0" />
+                                       </HBox.margin>
+                                    </VBox>
+                                    <VBox>
+                                       <children>
+                                          <Label />
+                                          <Button disable="true" mnemonicParsing="false" text="⛌" />
+                                       </children>
+                                    </VBox>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </VBox.margin>
+                              </HBox>
+                              <Separator prefWidth="200.0" />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <HBox>
+                                 <children>
+                                    <VBox>
+                                       <children>
+                                          <Label />
+                                          <TextField prefHeight="25.0" prefWidth="30.0" promptText="no" text="3" />
+                                       </children>
+                                       <HBox.margin>
+                                          <Insets right="5.0" />
+                                       </HBox.margin>
+                                    </VBox>
+                                    <VBox>
+                                       <children>
+                                          <Label text="Name:" />
+                                          <TextField disable="true" editable="false" text="Status" />
+                                          <CheckBox mnemonicParsing="false" selected="true" text="Track History">
+                                             <VBox.margin>
+                                                <Insets top="5.0" />
+                                             </VBox.margin>
+                                          </CheckBox>
+                                       </children>
+                                       <HBox.margin>
+                                          <Insets bottom="5.0" right="10.0" />
+                                       </HBox.margin>
+                                    </VBox>
+                                    <VBox>
+                                       <children>
+                                          <Label text="Type:" />
+                                          <ChoiceBox disable="true" prefWidth="150.0">
+                                             <VBox.margin>
+                                                <Insets bottom="5.0" right="5.0" />
+                                             </VBox.margin>
+                                          </ChoiceBox>
+                                          <TextField prefHeight="25.0" prefWidth="150.0" />
+                                          <ColorPicker prefHeight="25.0" prefWidth="150.0">
+                                             <VBox.margin>
+                                                <Insets top="5.0" />
+                                             </VBox.margin>
+                                          </ColorPicker>
+                                          <BorderPane prefWidth="150.0">
+                                             <left>
+                                                <Button mnemonicParsing="false" onAction="#onRemoveFromList" text="Remove" BorderPane.alignment="CENTER" />
+                                             </left>
+                                             <right>
+                                                <Button mnemonicParsing="false" onAction="#onAddToList" text="Add" BorderPane.alignment="CENTER" />
+                                             </right>
+                                             <VBox.margin>
+                                                <Insets bottom="5.0" top="5.0" />
+                                             </VBox.margin>
+                                          </BorderPane>
+                                          <ListView prefHeight="150.0" prefWidth="150.0" />
+                                       </children>
+                                       <HBox.margin>
+                                          <Insets bottom="5.0" />
+                                       </HBox.margin>
+                                    </VBox>
+                                    <VBox>
+                                       <children>
+                                          <Label />
+                                          <Button disable="true" mnemonicParsing="false" text="⛌" />
+                                       </children>
+                                    </VBox>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </VBox.margin>
+                              </HBox>
+                              <Separator prefWidth="200.0" />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <HBox>
+                                 <children>
+                                    <VBox>
+                                       <children>
+                                          <Label />
+                                          <TextField prefHeight="25.0" prefWidth="30.0" promptText="no" text="4" />
+                                       </children>
+                                       <HBox.margin>
+                                          <Insets right="5.0" />
+                                       </HBox.margin>
+                                    </VBox>
+                                    <VBox>
+                                       <children>
+                                          <Label text="Name:" />
+                                          <TextField disable="true" editable="false" text="Date" />
+                                          <CheckBox disable="true" mnemonicParsing="false" text="Track History">
+                                             <VBox.margin>
+                                                <Insets top="5.0" />
+                                             </VBox.margin>
+                                          </CheckBox>
+                                       </children>
+                                       <HBox.margin>
+                                          <Insets bottom="5.0" right="10.0" />
+                                       </HBox.margin>
+                                    </VBox>
+                                    <VBox>
+                                       <children>
+                                          <Label text="Type:" />
+                                          <ChoiceBox disable="true" prefWidth="150.0">
+                                             <VBox.margin>
+                                                <Insets bottom="5.0" right="5.0" />
+                                             </VBox.margin>
+                                          </ChoiceBox>
+                                       </children>
+                                       <HBox.margin>
+                                          <Insets bottom="5.0" />
+                                       </HBox.margin>
+                                    </VBox>
+                                    <VBox>
+                                       <children>
+                                          <Label />
+                                          <Button disable="true" mnemonicParsing="false" text="⛌" />
+                                       </children>
+                                    </VBox>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </VBox.margin>
+                              </HBox>
+                              <Separator prefWidth="200.0" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </VBox>
+                  <Button mnemonicParsing="false" onAction="#onAdd" text="Add" />
+               </children>
+               <padding>
+                  <Insets right="10.0" />
+               </padding>
+            </VBox>
+         </content>
+      </ScrollPane>
+   </center>
+   <top>
+      <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Name:" />
-            <TextField fx:id="nameField" onAction="#onCreate" promptText="Project Name">
+            <TextField fx:id="nameField" alignment="CENTER" promptText="Name">
+               <font>
+                  <Font size="18.0" />
+               </font>
                <VBox.margin>
-                  <Insets bottom="10.0" />
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </VBox.margin>
             </TextField>
-            <Label text="Directory:" />
-            <HBox>
+            <HBox alignment="CENTER">
                <children>
-                  <TextField fx:id="pathField" onAction="#onCreate" promptText="Path" />
-                  <Button mnemonicParsing="false" onAction="#onSelect" text="Select" />
+                  <VBox>
+                     <children>
+                        <Label text="Host:" />
+                        <TextField text="localhost" />
+                     </children>
+                  </VBox>
+                  <VBox>
+                     <children>
+                        <Label text="Port:" />
+                        <TextField text="1234" />
+                     </children>
+                  </VBox>
                </children>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="BOTTOM_CENTER">
+               <children>
+                  <VBox>
+                     <children>
+                        <Label text="Location:" />
+                        <TextField fx:id="pathField" prefHeight="25.0" prefWidth="246.0" />
+                     </children>
+                  </VBox>
+                  <Button mnemonicParsing="false" onAction="#onSelect" text="Select">
+                     <HBox.margin>
+                        <Insets left="5.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin>
             </HBox>
          </children>
-         <BorderPane.margin>
-            <Insets bottom="25.0" left="50.0" right="50.0" top="50.0" />
-         </BorderPane.margin>
       </VBox>
-   </center>
+   </top>
    <bottom>
       <BorderPane BorderPane.alignment="CENTER">
-         <left>
-            <Button mnemonicParsing="false" onAction="#onCancel" text="Cancel" BorderPane.alignment="CENTER" />
-         </left>
          <right>
             <Button mnemonicParsing="false" onAction="#onCreate" text="Create" BorderPane.alignment="CENTER" />
          </right>
+         <left>
+            <Button mnemonicParsing="false" onAction="#onCancel" text="Back" BorderPane.alignment="CENTER" />
+         </left>
          <BorderPane.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" />
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </BorderPane.margin>
       </BorderPane>
    </bottom>
