--- a/src/main/resources/com/main/datenpunk/detail-view.fxml
+++ b/src/main/resources/com/main/datenpunk/detail-view.fxml
@@ -2,54 +2,27 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.TilePane?>
 
 <BorderPane prefHeight="371.0" prefWidth="525.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.DetailController">
    <center>
       <HBox alignment="CENTER">
-         <children>
-            <TableView fx:id="historyTable">
-              <columns>
-                <TableColumn fx:id="statusColumn" prefWidth="-1.0" text="Status" />
-                <TableColumn fx:id="dateColumn" prefWidth="-1.0" text="Date" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-         </children>
+         <SplitPane fx:id="historyTable">
+            <HBox.margin>
+               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+            </HBox.margin>
+         </SplitPane>
       </HBox>
    </center>
    <top>
-      <HBox alignment="CENTER" prefHeight="94.0" prefWidth="526.0" spacing="30.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox alignment="CENTER">
-               <children>
-                  <Label prefWidth="150.0" text="Name:" />
-                  <TextField fx:id="nameField" onAction="#onUpdatePressed" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER">
-               <children>
-                  <Label prefWidth="150.0" text="Type:" />
-                  <TextField fx:id="typeField" onAction="#onUpdatePressed" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER">
-               <children>
-                  <Label prefHeight="18.0" prefWidth="150.0" text="Status:" />
-                  <ChoiceBox fx:id="statusBox" prefWidth="150.0" />
-               </children>
-            </VBox>
-         </children>
-      </HBox>
+      <TilePane fx:id="settingsContainer" alignment="CENTER" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </BorderPane.margin>
+      </TilePane>
    </top>
    <bottom>
       <BorderPane BorderPane.alignment="CENTER">
