--- a/src/main/resources/com/main/datenpunk/addElement-view.fxml
+++ b/src/main/resources/com/main/datenpunk/addElement-view.fxml
@@ -1,17 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="279.0" prefWidth="392.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.AddElementController">
-   <children>
-      <TextField fx:id="nameField" layoutX="117.0" layoutY="79.0" onAction="#onAccept" promptText="Name" />
-      <TextField fx:id="typeField" layoutX="121.0" layoutY="148.0" onAction="#onAccept" promptText="Type" />
-      <Button layoutX="95.0" layoutY="229.0" mnemonicParsing="false" onAction="#onCancel" text="Cancel" />
-      <Button layoutX="244.0" layoutY="229.0" mnemonicParsing="false" onAction="#onAccept" text="Accept" />
-      <Label layoutX="120.0" layoutY="131.0" text="Type" />
-      <Label layoutX="117.0" layoutY="61.0" text="Name" />
-   </children>
-</AnchorPane>
+
+<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.AddElementController">
+   <bottom>
+      <BorderPane BorderPane.alignment="CENTER">
+         <left>
+            <Button mnemonicParsing="false" onAction="#onCancel" text="Cancel" BorderPane.alignment="CENTER" />
+         </left>
+         <right>
+            <Button mnemonicParsing="false" onAction="#onAccept" text="Accept" BorderPane.alignment="CENTER" />
+         </right>
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="10.0" />
+         </BorderPane.margin>
+      </BorderPane>
+   </bottom>
+   <center>
+      <ScrollPane hbarPolicy="NEVER" BorderPane.alignment="CENTER">
+         <VBox fx:id="settingContainer">
+            <padding>
+               <Insets bottom="10.0" left="10.0" right="15.0" top="10.0"/>
+            </padding>
+         </VBox>
+      </ScrollPane>
+   </center>
+</BorderPane>
