--- a/src/main/resources/com/main/datenpunk/main-view.fxml
+++ b/src/main/resources/com/main/datenpunk/main-view.fxml
@@ -98,7 +98,7 @@
                                                                <items>
                                                                   <VBox minWidth="0.0" prefHeight="200.0" prefWidth="100.0">
                                                                      <children>
-                                                                        <Button minWidth="0.0" mnemonicParsing="false" style="-fx-background-radius: 0;" />
+                                                                        <Button minWidth="0.0" mnemonicParsing="false" prefWidth="9999.0" style="-fx-background-radius: 0;" />
                                                                         <ListView minWidth="0.0" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
                                                                      </children>
                                                                   </VBox>
