--- a/src/main/resources/com/main/datenpunk/main-view.fxml
+++ b/src/main/resources/com/main/datenpunk/main-view.fxml
@@ -15,11 +15,11 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.MainController">
@@ -34,50 +34,22 @@
                            <center>
                               <VBox>
                                  <children>
-                                    <TitledPane expanded="false" text="Whitelist">
+                                    <TitledPane text="Whitelist">
                                        <content>
-                                          <AnchorPane prefHeight="240.0">
-                                             <children>
-                                                <TextField fx:id="whitelistNameField" layoutX="14.0" layoutY="35.0" onAction="#onAddToList" />
-                                                <ListView fx:id="whitelistNameList" layoutX="14.0" layoutY="108.0" onKeyReleased="#onListKey" onMouseClicked="#onListClick" prefHeight="97.0" prefWidth="149.0" />
-                                                <Label layoutX="14.0" layoutY="10.0" text="Name:" />
-                                                <TextField fx:id="whitelistTypeField" layoutX="181.0" layoutY="35.0" onAction="#onAddToList" />
-                                                <ListView fx:id="whitelistTypeList" layoutX="181.0" layoutY="108.0" onKeyReleased="#onListKey" onMouseClicked="#onListClick" prefHeight="97.0" prefWidth="149.0" />
-                                                <Label layoutX="181.0" layoutY="10.0" text="Type:" />
-                                                <ListView fx:id="whitelistStatusList" layoutX="353.0" layoutY="108.0" onKeyReleased="#onListKey" onMouseClicked="#onListClick" prefHeight="97.0" prefWidth="149.0" />
-                                                <Label layoutX="353.0" layoutY="10.0" text="Status:" />
-                                                <ChoiceBox fx:id="whitelistStatusBox" layoutX="353.0" layoutY="35.0" prefWidth="150.0" />
-                                                <Button fx:id="addToNameWhitelist" layoutX="14.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAddToList" text="Add" />
-                                                <Button fx:id="removeFromNameWhitelist" layoutX="103.0" layoutY="71.0" mnemonicParsing="false" onAction="#onRemoveFromList" text="Remove" />
-                                                <Button fx:id="addToTypeWhitelist" layoutX="181.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAddToList" text="Add" />
-                                                <Button fx:id="removeFromTypeWhitelist" layoutX="270.0" layoutY="71.0" mnemonicParsing="false" onAction="#onRemoveFromList" text="Remove" />
-                                                <Button fx:id="addToStatusWhitelist" layoutX="354.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAddToList" text="Add" />
-                                                <Button fx:id="removeFromStatusWhitelist" layoutX="443.0" layoutY="71.0" mnemonicParsing="false" onAction="#onRemoveFromList" text="Remove" />
-                                             </children>
-                                          </AnchorPane>
+                                          <TilePane fx:id="whiteListContainer">
+                                             <padding>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                             </padding>
+                                          </TilePane>
                                        </content>
                                     </TitledPane>
-                                    <TitledPane expanded="false" text="Blacklist">
+                                    <TitledPane text="Blacklist">
                                        <content>
-                                          <AnchorPane prefHeight="207.0">
-                                             <children>
-                                                <TextField fx:id="blacklistNameField" layoutX="14.0" layoutY="35.0" onAction="#onAddToList" />
-                                                <ListView fx:id="blacklistNameList" layoutX="14.0" layoutY="108.0" onKeyReleased="#onListKey" onMouseClicked="#onListClick" prefHeight="97.0" prefWidth="149.0" />
-                                                <Label layoutX="14.0" layoutY="10.0" text="Name:" />
-                                                <TextField fx:id="blacklistTypeField" layoutX="181.0" layoutY="35.0" onAction="#onAddToList" />
-                                                <ListView fx:id="blacklistTypeList" layoutX="181.0" layoutY="108.0" onKeyReleased="#onListKey" onMouseClicked="#onListClick" prefHeight="97.0" prefWidth="149.0" />
-                                                <Label layoutX="181.0" layoutY="10.0" text="Type:" />
-                                                <ListView fx:id="blacklistStatusList" layoutX="353.0" layoutY="108.0" onKeyReleased="#onListKey" onMouseClicked="#onListClick" prefHeight="97.0" prefWidth="149.0" />
-                                                <Label layoutX="353.0" layoutY="10.0" text="Status:" />
-                                                <ChoiceBox fx:id="blacklistStatusBox" layoutX="353.0" layoutY="35.0" prefWidth="150.0" />
-                                                <Button fx:id="addToNameBlacklist" layoutX="14.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAddToList" text="Add" />
-                                                <Button fx:id="removeFromNameBlacklist" layoutX="103.0" layoutY="71.0" mnemonicParsing="false" onAction="#onRemoveFromList" text="Remove" />
-                                                <Button fx:id="addToTypeBlacklist" layoutX="181.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAddToList" text="Add" />
-                                                <Button fx:id="removeFromTypeBlacklist" layoutX="270.0" layoutY="71.0" mnemonicParsing="false" onAction="#onRemoveFromList" text="Remove" />
-                                                <Button fx:id="addToStatusBlacklist" layoutX="354.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAddToList" text="Add" />
-                                                <Button fx:id="removeFromStatusBlacklist" layoutX="443.0" layoutY="71.0" mnemonicParsing="false" onAction="#onRemoveFromList" text="Remove" />
-                                             </children>
-                                          </AnchorPane>
+                                          <TilePane fx:id="blackListContainer">
+                                             <padding>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                             </padding>
+                                          </TilePane>
                                        </content>
                                     </TitledPane>
                                     <TitledPane text="Table">
