--- a/src/main/resources/com/main/datenpunk/newPreset-view.fxml
+++ b/src/main/resources/com/main/datenpunk/newPreset-view.fxml
@@ -6,37 +6,52 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.NewPresetController">
-   <children>
-      <Label text="Name:" />
-      <TextField fx:id="nameField" promptText="Name">
-         <VBox.margin>
-            <Insets bottom="10.0" top="5.0" />
-         </VBox.margin>
-      </TextField>
-      <CheckBox fx:id="dateRangeCheck" mnemonicParsing="false" text="Date range" />
-      <CheckBox fx:id="whitelistCheck" mnemonicParsing="false" selected="true" text="Whitelist">
-         <VBox.margin>
-            <Insets bottom="5.0" top="5.0" />
-         </VBox.margin>
-      </CheckBox>
-      <CheckBox fx:id="blacklistCheck" mnemonicParsing="false" selected="true" text="Blacklist" />
-      <BorderPane>
-         <left>
-            <Button mnemonicParsing="false" onAction="#onCancel" text="Cancel" BorderPane.alignment="CENTER" />
-         </left>
-         <right>
-            <Button mnemonicParsing="false" onAction="#onCreate" text="Create" BorderPane.alignment="CENTER" />
-         </right>
-         <VBox.margin>
-            <Insets top="15.0" />
-         </VBox.margin>
-      </BorderPane>
-   </children>
-   <padding>
-      <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
-   </padding>
+<VBox prefHeight="237.0" prefWidth="292.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.main.datenpunk.NewPresetController">
+    <padding>
+        <Insets bottom="25.0" left="25.0" right="25.0" top="25.0"/>
+    </padding>
+    <Label text="Name:"/>
+    <TextField fx:id="nameField" promptText="Name">
+        <VBox.margin>
+          <Insets bottom="10.0" top="5.0"/>
+        </VBox.margin>
+    </TextField>
+    <GridPane>
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        </rowConstraints>
+        <CheckBox fx:id="whitelistCheck" mnemonicParsing="false" selected="true" text="Whitelist"
+                  GridPane.rowIndex="1"/>
+        <CheckBox fx:id="blacklistCheck" mnemonicParsing="false" selected="true" text="Blacklist"
+                  GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+        <CheckBox fx:id="fromDateCheck" mnemonicParsing="false" text="From Date"/>
+        <CheckBox fx:id="toDateCheck" mnemonicParsing="false" text="To Date" GridPane.columnIndex="1"/>
+        <CheckBox fx:id="columnVisCheck" mnemonicParsing="false" selected="true" text="Column Visibility"
+                  GridPane.rowIndex="2"/>
+        <CheckBox fx:id="columnSizeCheck" mnemonicParsing="false" selected="true" text="Column Sizes"
+                  GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+    </GridPane>
+    <BorderPane>
+        <left>
+          <Button mnemonicParsing="false" onAction="#onCancel" text="Cancel" BorderPane.alignment="CENTER"/>
+        </left>
+        <right>
+          <Button mnemonicParsing="false" onAction="#onCreate" text="Create" BorderPane.alignment="CENTER"/>
+        </right>
+        <VBox.margin>
+          <Insets top="15.0"/>
+        </VBox.margin>
+    </BorderPane>
 </VBox>
