--- a/src/main/resources/com/main/datenpunk/newProject-view.fxml
+++ b/src/main/resources/com/main/datenpunk/newProject-view.fxml
@@ -177,7 +177,7 @@
                                                 <Insets bottom="5.0" right="5.0" />
                                              </VBox.margin>
                                           </ChoiceBox>
-                                          <TextField prefHeight="25.0" prefWidth="150.0" promptText="Name" />
+                                          <TextField onAction="#onAddToList" prefHeight="25.0" prefWidth="150.0" promptText="Name" />
                                           <ColorPicker prefHeight="25.0" prefWidth="155.0">
                                              <VBox.margin>
                                                 <Insets top="5.0" />
@@ -193,6 +193,22 @@
                                              <VBox.margin>
                                                 <Insets bottom="5.0" top="5.0" />
                                              </VBox.margin>
+                                             <center>
+                                                <HBox alignment="CENTER" BorderPane.alignment="CENTER">
+                                                   <children>
+                                                      <Button mnemonicParsing="false" onAction="#onMoveUp" text="▲">
+                                                         <font>
+                                                            <Font size="10.0" />
+                                                         </font>
+                                                      </Button>
+                                                      <Button mnemonicParsing="false" onAction="#onMoveDown" text="▼">
+                                                         <font>
+                                                            <Font size="10.0" />
+                                                         </font>
+                                                      </Button>
+                                                   </children>
+                                                </HBox>
+                                             </center>
                                           </BorderPane>
                                           <ListView prefHeight="150.0" prefWidth="150.0" />
                                        </children>
